fix missing background

--- a/styles.css
+++ b/styles.css
@@ -507,9 +507,9 @@ img {
     box-shadow: 0px 2px 5px rgb(25, 25, 25), inset 0px 1px 2px rgb(251, 251, 251);
     }
 
-    .rock-button: focus {
-        box-shadow: 0px 2px 5px rgb(25, 25, 25), inset 0px 1px 2px rgb(251, 251, 251);
+    /* .rock-button: focus {
+        box-shadow: 0px 2px 5px rgb(25, 25, 25) inset 0px 1px 2px rgb(251, 251, 251);
         size: 50%;
-    }
+    } */
 
 }
